--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
     - assets/icons/ic_launcher.png
     - assets/icons/treesyt_logo.png
+    - assets/icons/crop.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
